Banner inicial adicionado

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <ul>
                             <li><a href="#">Web Design</a></li>
                             <li><a href="#">SEO</a></li>
-                            <li><a href="#">Design</a></li>
+                            <li><a href="#">Google ADS</a></li>
                         </ul>
                     </li>
                 </div>
@@ -38,6 +38,11 @@
         </nav>
     
     </div>
+
+    <div class="banner1">
+        <img src="imagens/banner1.png">
+    </div>
+
 </body>
 
 </html>
