--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rocket Tail</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+
+    <!-- bootstrap importação -->
+    <link href='bootstrap/css/bootstrap.min.css' rel="stylesheet">
+    <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
+    
 </head>
 
 <body>
@@ -40,7 +45,25 @@
     </div>
 
     <div class="banner1">
-        <img src="imagens/banner1.png">
+        <div id="slide" class="carousel slide" data-bs-ride="true">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#slide" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#slide" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#slide" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="img/1.png" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="img/2.png" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="img/3.png" class="d-block w-100" alt="...">
+              </div>
+            </div>
+            </button>
+          </div>
     </div>
 
 </body>
