box shadow e imagem atualizados

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class= "cabecalho">
 
         <div class="logo">
-            <img src="imagens/logo.jpg">
+            <img src="imagens/logo.jpg" alt="Logo da RocketTail">
         </div>
         
         <nav>
@@ -69,6 +69,23 @@
             </div>
             </button>
           </div>
+    </div>
+
+    <div class="construcao">
+        <figure>  
+            <img src="imagens/construcao.png" alt="Construcao">
+        </figure> 
+
+        <div class="textoConstrucao">
+            <h1>Desenvolvimento limpo</h1>
+            <h2>Sites que carregam mais rápido</h2>
+            <p>
+                Aqui o seu site é feito especialmente feito para você! 
+                Cada linha de código é pensada para a melhor otimização possível, 
+                resultando em sites personalizados e extremamente rápidos na hora de carregar.
+            </p>
+        </div>
+    
     </div>
 
 </body>
