Sessão puzzle adicionada, falta mais formatação

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
+    <script>
+        window.alert("Seja bem-vindo(a)!")
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rocket Tail</title>
@@ -44,7 +47,7 @@
                     </li>
                 </div>
                 <div class="underline">
-                    <li><a href="#">Contato</a></li>
+                    <li><a href="contato.html">Contato</a></li>
                 </div>
             </ul>
         </nav>
@@ -132,6 +135,21 @@
             </figure>
             <p>Google ADS</p>
         </div>
+    </div>
+
+    <div class="quebraCabeca">
+        <figure class="puzzle">
+            <img src="imagens/puzzle.png" alt="Puzzle">
+        </figure>
+
+        <div class="textoQuebraCabeca">
+            <h1>Briefing eficiente</h1>
+            <h2>Site compatível com o seu negócio e alinhado com as suas ideias.</h2>
+            <h3>
+                Aqui nós formamos uma parceria com o cliente, com o foco em resultados pertinentes ao negócio e às suas espectativas!
+            </h3>
+        </div>
+
     </div>
 
 </body>
