Sessão construção e puzzle consertadas, grid adicionado à contatos

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <nav>
             <ul class="menu">
                 <div class="underline">
-                    <li><a href="#">Início</a></li>
+                    <li><a href="index.html">Início</a></li>
                 </div>
                 <div class="underline">
                     <li><a href="#">Sobre</a></li>
@@ -93,6 +93,23 @@
     
     </div>
 
+    <div class="puzzle">
+
+        <div class="textoPuzzle">
+            <h1>Briefing eficiente</h1>
+            <h2>Site compatível com o seu negócio</h2>
+            <p>
+                Aqui nós formamos uma parceria com o cliente, 
+                com o foco em resultados pertinentes ao negócio 
+                e alinhado com as suas ideias!
+            </p>
+        </div>
+
+        <figure>
+            <img src="imagens/puzzle.png" alt="Puzzle">
+        </figure>
+    </div>
+
     <div class="faixa">
         <h2>Design responsivo e orientado a SEO</h2>
         <h1>Tenha uma landing page rápida e funcional</h1>
@@ -135,21 +152,6 @@
             </figure>
             <p>Google ADS</p>
         </div>
-    </div>
-
-    <div class="quebraCabeca">
-        <figure class="puzzle">
-            <img src="imagens/puzzle.png" alt="Puzzle">
-        </figure>
-
-        <div class="textoQuebraCabeca">
-            <h1>Briefing eficiente</h1>
-            <h2>Site compatível com o seu negócio e alinhado com as suas ideias.</h2>
-            <h3>
-                Aqui nós formamos uma parceria com o cliente, com o foco em resultados pertinentes ao negócio e às suas espectativas!
-            </h3>
-        </div>
-
     </div>
 
 </body>
